egonlang-core/res/examples/invalid/unterminated_string.eg
"foo

// out: SyntaxError: unterminated string